tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_47.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (((+ (0 * 0)) MOD ((z - z) + (200 + 1))) <= ((+ (1223 + 2)) * ((x * 0) * (1223 MOD y))));
               z := (- (((1223 MOD 2) * (- 1223)) - ((x + y) * (x * 0))));
               y := (- (((y * 2) - (y * 2)) * ((0 - z) - (x * 1223))));
               q := (~ (((1 DIV 1223) - (y + 2)) < ((0 * x) * (200 DIV 1))));
  (* error *)  q := ((- (- (- q))) < ((- (+ 2)) DIV ((+ y) - (2 DIV z))));
               x := (+ (((y DIV x) + (- 2)) + ((+ y) DIV (1 + z))));
               p := (~ ((+ (+ x)) = ((- 1) * (200 MOD 1223))));
               z := ((+ ((+ 200) - (+ 1223))) DIV (((y * 1223) * (0 - y)) * (- (0 MOD 200))));
               p := ((((y - 1223) MOD (1 + 1)) MOD ((y - 0) - (2 + 2))) # (- ((0 MOD 1223) - (- 1223))));
               z := (((- (x DIV 1223)) * ((+ y) - (+ z))) MOD ((+ (0 - 0)) * ((+ 200) * (z * 2))))
END Test15.